--- a/Truence/css/styles.css
+++ b/Truence/css/styles.css
@@ -1,34 +1,42 @@
-
-
+html {
+    box-sizing: border-box;
+    font-family: Archivo, sans-serif;
+  }
+  *, *::before, *::after {
+    box-sizing: inherit;
+  }
+  
 body {
     margin: 0;
-    background-color: blue;
 }
 
 header {
+    background-color: #2e2828;
     display: flex;
-    height: 45px;
-    background-color: red;
-}
-
-.nav {
-    background-color: red;
-    color: white;
-    font-size: 12px;
-
-}
-
-li {
-    display: inline;
-    padding-right: 10px;
-    margin-bottom: 0;
 }
 
 .nav-logo {
-    margin-top: -70px;
-    margin-left: -50px;
-    margin-right: -80px;
-    width: 283px;
-    height: 171px;
-    z-index: 1;
+    width: 240px;
+    height: auto;
+    margin: 10px;
+}
+
+.nav {
+    align-self: flex-end;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
+
+.nav a{
+    color: white;
+    font-weight: 600;
+    margin: 10px;
+}
+
+.client-portal {
+    color: white;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: 20px;
+    align-self: center;
 }
