--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,19 +2,12 @@
     font-family: 'Jura', sans-serif;
 }
 
-#header-nav {
-    font-size: 1.2rem;
-}
+
 
 
 .underline {
     text-decoration: none;
     border-bottom: 4px solid #FF6363;
-}
-
-#header-nav ul {
-    text-align: center;
-    gap: 1.2rem;
 }
 
 #header-nav ul a:hover, #header-nav ul a:focus{
@@ -38,7 +31,7 @@
     padding: 3rem;
     text-align: center;
     color: white;
-    background-color: #3b0000;
+    background-color: #3F3D56;
 }
 
 #carousel {
@@ -47,26 +40,5 @@
 
 #slide-1 {
     gap: 3rem;
-}
-
-@media (max-width: 560px) {
-
-    #section-1 h1 {
-        font-size: 2rem;
-    }
-
-    #section-1 {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #intro-para {
-        width: 100%;
-    }
-    #full-width {
-        width: 100%;
-        margin-bottom: 2rem;
-    }
-    
 }
 
