--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -57,3 +57,13 @@ footer a:hover, footer a:focus{
 footer {
     background-color: #222;
 }
+
+@media (max-width: 400px) {
+    html {
+        font-size: .5rem;
+    }
+
+    .carousel-item {
+        height: 55rem;
+    }
+}
