--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,83 +1,91 @@
 * {
-    font-family: 'Jura', sans-serif;
+  font-family: "Jura", sans-serif;
 }
-
-
-
 
 .underline {
-    text-decoration: none;
-    border-bottom: 4px solid #FF6363;
+  text-decoration: none;
+  border-bottom: 4px solid #ff6363;
 }
 
-#header-nav ul a:hover, #header-nav ul a:focus{
-    text-decoration: underline;
-    color: #FF6363;
-    transition: .3s;
+#header-nav ul a:hover,
+#header-nav ul a:focus {
+  text-decoration: underline;
+  color: #ff6363;
+  transition: 0.3s;
 }
-
 
 footer a {
-    color: white;
-    text-decoration: underline;
+  color: white;
+  text-decoration: underline;
 }
 
-footer a:hover, footer a:focus{
-    text-decoration: underline;
-    color: #FF6363;
-    transition: .3s;
+footer a:hover,
+footer a:focus {
+  text-decoration: underline;
+  color: #ff6363;
+  transition: 0.3s;
 }
 
 #section-1 {
-    margin-bottom: 3rem;
-    font-size: 1.3rem;
+  margin-bottom: 3rem;
+  font-size: 1.3rem;
 }
 
 #section-1 h1 {
-    font-weight: 900;
-    font-size: 3rem;
-    margin-bottom: 1rem;
+  font-weight: 900;
+  font-size: 3rem;
+  margin-bottom: 1rem;
 }
 
 #section-2 {
-    padding: 3rem;
-    text-align: center;
-    color: white;
-    background-color: #3F3D56;
+  padding: 3rem;
+  text-align: center;
+  color: white;
+  background-color: #3f3d56;
 }
 
-#section-3, #section-4, #section-5, #section-6 {
-    font-size: 1.3rem;
+#section-3,
+#section-4,
+#section-5,
+#section-6 {
+  font-size: 1.3rem;
 }
-#section-6, #sec-6-bg{
-    background-color: #2F2E41;
-    color: white;
+#section-6,
+#sec-6-bg {
+  background-color: #2f2e41;
+  color: white;
 }
 
 footer {
-    background-color: #222;
+  background-color: #222;
 }
 
 @media (max-width: 990px) {
-    html {
-        font-size: .85rem;
-    }
-}
-
-
-@media (max-width: 410px) {
-    html {
-        font-size: .75rem;
-    }
-
+  html {
+    font-size: 0.85rem;
+  }
+  #slide-1-img {
+      max-width: 70%;
+      padding-top: 1rem;
+  }
     .carousel-item {
-        height: 45rem;
-    }
-
-    #header-logo-link {
-        width: 75%;
-    }
-    #header-logo {
-        width: 100%;
-    }
+    height: 45rem;
+  }
 }
+
+@media (max-width: 510px) {
+  html {
+    font-size: 0.75rem;
+    }
+  #hero-image {
+      margin-top: 2rem;
+  }
+
+  #header-logo-link {
+    width: 75%;
+  }
+  #header-logo {
+    width: 100%;
+  }
+}
+
