--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,13 +14,14 @@
   transition: 0.3s;
 }
 
-footer a {
+footer a, #section-2 a {
   color: white;
   text-decoration: underline;
 }
 
 footer a:hover,
-footer a:focus {
+footer a:focus,
+#section-2 a:hover {
   text-decoration: underline;
   color: #ff6363;
   transition: 0.3s;
@@ -44,12 +45,14 @@ footer a:focus {
   background-color: #3f3d56;
 }
 
+
 #section-3,
 #section-4,
 #section-5,
 #section-6 {
   font-size: 1.3rem;
 }
+
 #section-6,
 #sec-6-bg {
   background-color: #2f2e41;
@@ -71,7 +74,13 @@ footer {
     .carousel-item {
     height: 45rem;
   }
+
+  #hero-image {
+    margin-top: 3rem;
+    max-width: 90%;
+  }
 }
+
 
 @media (max-width: 510px) {
   html {
@@ -79,6 +88,7 @@ footer {
     }
   #hero-image {
       margin-top: 2rem;
+      max-width: 100%;
   }
 
   #header-logo-link {
